# pkg/handlers/handlers.go
@@ -251,6 +251,15 @@ func (s *Handlers) ClientSetVisibility(ctx context.Context, req *pb.ClientSetVis
 	return resp, nil
 }
 
+func (s *Handlers) ClientNewMatch(ctx context.Context, req *pb.ClientNewMatchRequest) (*pb.ClientNewMatchResponse, error) {
+	handler := &user.ClientNewMatchHandler{Model: s.Model}
+	resp, err := handler.ClientNewMatch(ctx, req)
+	if err != nil {
+		return nil, err
+	}
+	return resp, nil
+}
+
 func (s *Handlers) ClientVerifyPatientComplete(ctx context.Context, req *pb.ClientVerifyPatientCompleteRequest) (*pb.ClientVerifyPatientCompleteResponse, error) {
 	handler := &patient.ClientVerifyPatientCompleteHandler{Model: s.Model}
 	resp, err := handler.ClientVerifyPatientComplete(ctx, req)
